getting-started-with-istio-service-mesh/ch05/egress-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: wikipedia-egressgateway
spec: # 지정된 호스트, 포트와 일치하는 요청을 처리할 수 있는 egress gw 정의
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - en.wikipedia.org
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: wiki-egress-gateway
spec: # egress gw와 service entry 사이의 접착제 역할
  hosts:
  - en.wikipedia.org
  gateways: # 게이트웨이와 사이드카에 모두 적용
  - wikipedia-egressgateway
  - mesh
  http:
  - match:
    - gateways:
      - mesh
      port: 80
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        port:
          number: 80
      weight: 100
  - match:
    - gateways:
      - wikipedia-egressgateway
      port: 80
    route:
    - destination:
        host: en.wikipedia.org
        port:
          number: 80
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: wikipedia
spec: # 메시 내부의 서비스에서 액세스할 수 있도록 구성
  hosts:
  - en.wikipedia.org
  ports:
  - number: 80
    name: http
    protocol: HTTP
  resolution: DNS
  location: MESH_EXTERNAL
